# snl-quest

./: .gitignore  .travis.yml  CHANGELOG.md  Hourly Load Data.ipynb  LICENSE  MANIFEST.in  Master_btm_flow_2026_runner.ipynb  QuESt.kv  README.md  RealVNC-server-unix-templates-6.11.0.tar.gz.tar  bounds_demo.py  btm_dms.p  btm_flow_program.py  charges.csv  job.sh  loadpv.csv  main.py  master_btm_flow_2026_program.py  optest.py  pv.py  pv_data.json  pyproject.toml  quest.ini  requirements.txt  resources.qrc  resultssss.csv  setup.py  setup_cx.py  unix_entry.sh  valuation_dms.p  valuation_flow_program.py  vendor_mac_permissions.xml  version.txt  win_entry.bat  [D[D[D  [D[D[D.pub
.github/workflows/: Bi-WeeklyUpdate.yml  Daily.yml  DailyUpdate.yml  README.md  build-package.yml  github-release.yml  publish-pypi.yml  release.yaml  release.yml
.ipynb_checkpoints/: Master_btm_flow_2026_runner-checkpoint.ipynb
app/about_pages/: about_drop.py  about_it.py
app/data_vis/: data_view.py  streamlit_app.py
app/home_page/: home_funcs.py  home_page.py
app/tools/: a_behind_del.py  a_behind_env.py  a_energy_del.py  a_energy_env.py  a_eval_del.py  a_eval_env.py  a_micro_del.py  a_micro_env.py  a_perf_del.py  a_perf_env.py  a_tech_del.py  a_tech_env.py  btm.bat  (+11 more)
ci/: environment.yml
docs/: app.about_pages.rst  app.chat_page.rst  app.home_page.rst  app.home_page.ui.rst  app.settings_pages.rst  app.splash_screen.rst  app.work_space.ui.rst  conf.py  index.rst  modules.rst  quest.app.about_pages.rst  quest.app.about_pages.ui.rst  quest.app.rst  quest.app.splash_screen.rst  quest.app.tools.env_delete.rst  quest.app_envs.rst  quest.data.SPP.LMP.DAM.location.2022.03.rst  quest.data.SPP.LMP.DAM.location.2022.rst  quest.data.SPP.LMP.DAM.rst  quest.data.SPP.MCP.DAM.rst  quest.data.SPP.MCP.rst  quest.data.load.rst  quest.images.chat_icons.rst  quest.images.icons.rst  quest.images.logo.rst  quest.images.read.rst  quest.images.svgs.rst  quest.licenses.rst  quest.snl_libraries.gpt.data.graphs.rst  quest.snl_libraries.gpt.data.rst  quest.snl_libraries.rst  quest.snl_libraries.snl_btm.btm.ci.rst  quest.snl_libraries.snl_btm.btm.docs.ValuationOptimizer.rst  quest.snl_libraries.snl_btm.btm.docs.rst  quest.snl_libraries.snl_btm.btm.es_gui.apps.btm.rst  quest.snl_libraries.snl_btm.btm.es_gui.apps.rst  quest.snl_libraries.snl_btm.btm.es_gui.resources.docs.sphinx.rst  quest.snl_libraries.snl_btm.btm.es_gui.resources.docs.sphinx.source.images.tutorial.rst  quest.snl_libraries.snl_btm.btm.es_gui.resources.fonts.rst  quest.snl_libraries.snl_btm.btm.es_gui.resources.help_views.common.results_viewer.rst  (+129 more)
es_gui/: readutdata.py  readutdata2.py
licenses/: bs4.txt  kivy.txt  matplotlib.txt  numpy.txt  requests.txt
quest/: LICENSE  README.md  __init__.py  __main__.py  paths.py  resources.qrc
sphinx/: Makefile  conf.py  index.rst  make.bat  model_storage.rst  optimizer.rst  valuation_optimizer.rst
themes/: DarkStyleSheet_YM.qss  dark_mode.qss  dark_prac.qss  light_mode.qss  palette_dark.py
usage/: __main__.py  requirements.txt
(+2116 files in other folders)
