[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Quest"
version = "2.0"
description = "Sandia National Laboratories Energy Storage Application Platform"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sandia National Laboratories", email = "tunguy@sandia.gov" }
]
keywords = ["energy storage", "application platform", "Sandia National Laboratories"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.dependencies]
PySide6 = "==6.5.2"
pandas = "==2.2.1"
streamlit = "==1.33.0"
openai = "==0.28.1"
configparser = "==6.0.1"
matplotlib = "==3.8.3"
geopandas = "==0.14.3"
psutil = "==5.9.0"
GitPython = "==3.1.43"
NodeGraphQt = { git = "https://github.com/cancom84/NodeGraphQt-PySide6.git" }

[tool.setuptools]
packages = ["quest"]
include_package_data = true

[tool.setuptools.package-data]
"*" = [
    "*.txt", "*.rst", "*.json", "*.jpg", "*.qss", "*.sh", "*.svg", "*.png",
    "*.kv", "*.bat", "*.csv", "*.md", "*.yml", "*.dll", "*.idf", "*.doctree",
    ".*info", "*.html", "*.js", "*.inv", "*.gif", "*.css", "*.eps", "*.pickle",
    "*.xlsx", "*.ttf", "*.pdf", "*.mplstyle", "*.ini", "**/license*"
]

[project.scripts]
quest = "quest.__main__:main"
